Maps loading from file, reused tests